@@ -59,6 +59,6 @@ public class TestPoint {
     private Shape createPointFromPathObject() {
         return Shape.createFromPathObject(PathObjects.createAnnotationObject(
                 ROIs.createPointsROI(10, 20, null)
-        )).get(0);
+        )).getFirst();
     }
 }
